# Pure-Stereo-Vision-Obstacle-Avoidance-Algorithm

./: LICENSE  README.md
docs/: algorithm.md  hardware.md  run_commands.md  troubleshooting.md
src/realsense_depth_avoidance/: package.xml  setup.cfg
src/realsense_depth_avoidance/realsense_depth_avoidance/: __init__.py  depth_gap_avoidance.py  exit_color_fixed.py
