<?xml version="1.0"?>
<package format="3">
  <name>realsense_depth_avoidance</name>
  <version>0.1.0</version>
  <description>RealSense depth and YOLO based obstacle avoidance for Jackal UGV on ROS 2 Humble.</description>

  <maintainer email="user@example.com">Zirui Wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>